# le_Market_Intelligence_Platform

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Docs/: CHANGELOG.md  ROADMAP.md  code_flow.md  variable_list.md
app/: analysis.py  backtest.py  scan.py
dashboard/: components.py  data.py  main.py  styles.py
pulseengine/core/: __init__.py  app.py  backtest.py  context.py  errors.py  explanation.py  news.py  price.py  sentiment.py  signals.py  storage.py
pulseengine/local/: components.py  dashboard.py  data.py  scan.py  styles.py
pulseengine/web/: dashboard.py
tests/: MAINTENANCE.md  test_core.py  test_logic_coverage.py  test_optimisation.py  test_pipeline.py  test_storage_and_scan.py  test_web_surface.py
